# WhatsAppChatBot

./: .gitignore  README.md  gunicorn.conf.py  main.py  procfile  pyproject.toml
agent/: chatbot.py  main.py  test.ipynb
agent/prompt/: systemPrompt.py
agent/tool/: BasicToolNode.py  retriever_tool.py
brouillon/: chatbot.ipynb  langgraph_agentic_rag.ipynb  test_chatbot.ipynb
