[tool.poetry]
name = "whatsapp chatbot"
version = "0.1.0"
description = ""
authors = ["Henri d'ANDRIA <henri.dandria@institut-ia.com>"]
license = "Private"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
